# ret-sync

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
ext_bn/retsync/: __init__.py  plugin.json  sync.py
ext_bn/retsync/retsync/: config.py  log.py  rsconfig.py  rswidget.py  ui.py  utils.py
ext_windbg/: CMakeLists.txt
ext_windbg/sync/: sync.cpp  tunnel.cpp
ext_x64dbg/: CMakeLists.txt
ext_x64dbg/cmake/: x64dbg.cmake
ext_x64dbg/x64dbg_sync/: core.cpp  sync.h
